# podcast

./: .env.example  .gitignore  README.md  STRUCTURE.md  app.py  gemini.py  lens.py  perplexity.py  pyproject.toml  requirements.txt  run.py  setup.py
src/: __init__.py  main.py
src/api/: __init__.py  apify_client.py  gemini_client.py  openai_client.py  perplexity_api.py  supabase_client.py
src/config/: __init__.py  logging_config.py  settings.py
src/services/: __init__.py  agent_search_service.py  analysis_service.py  natural_agent_service.py  specific_agent_service.py  video_service.py
src/ui/components/: __init__.py  analysis_results.py  instagram_posts.py  youtube_results.py
tests/: conftest.py
tests/api/: test_apify_client.py  test_openai_client.py
tests/services/: test_analysis_service.py  test_natural_agent_service.py  test_specific_agent_service.py  test_video_service.py
