[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-trend-finder"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A Streamlit application that helps discover and analyze trending podcast content"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "apify-client>=1.4.0",
    "openai>=1.3.0",
    "requests>=2.31.0",
    "watchdog>=3.0.0",
] 